--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -14,13 +14,14 @@
 body{
     font-family: 'Noto Sans', sans-serif;
     font-family: 15px;
+
 }
 /*menu*/
 .menu {
   width: 100%;
   position: sticky;
   text-align: center;
-  background-color: var(--naranja);
+ 
   padding: 4px;
   justify-content: center;
   margin-bottom: 50px;
@@ -40,11 +41,46 @@ body{
   background-color: var(--naranja);
 }
 .contenedor {
-    width: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 100px 0;
 }
-.titulo {
-    text-align: center;
-    align-items: center;
+.inicio::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%),
+    url('../CSS/fondojs.png');
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+  z-index: -1;
+}
+.inicio-contenedor {
+  max-width: 800px;
+  padding: 100px 0;
+  display: grid;
+  grid-auto-rows: max-content;
+  align-items: center;
+  gap: 1em;
+  padding-bottom: 100px;
+  text-align: center;
+  color: var(--color-secundario);
+  margin-bottom: 15rem;
+}
+.inicio-titulo {
+  font-size: 3rem;
+}
+.inicio-parrafo {
+  margin-bottom: 20px;
+}
+.subtitulo {
+  color: var(--naranja);
+  font-size: 2rem;
+  margin-bottom: 25px;
+  text-align: center;
 }
