--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -22,7 +22,6 @@ body{
   width: 100%;
   position: sticky;
   text-align: center;
- 
   padding: 4px;
   justify-content: center;
   margin-bottom: 50px;
@@ -31,9 +30,10 @@ body{
   display: inline-block;
   text-decoration: none;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: var(--color-secundario);
+  color: var(--negro);
   padding: 15px;
   transition: 0.5s ease all;
+  font-weight: bolder;
 }
 .menu a:hover {
   letter-spacing: 4px;
@@ -55,29 +55,32 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%),
-    url('../CSS/fondojs.png');
-  background-size: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+  background-color: #e5e5f7;
+  background-image:  radial-gradient(#444cf7 0.7000000000000001px, transparent 0.7000000000000001px), radial-gradient(#444cf7 0.7000000000000001px, #e5e5f7 0.7000000000000001px);
+  background-size: 28px 28px;
+  background-position: 0 0,14px 14px;
+  clip-path: polygon(0 0, 100% 0, 100% 40%, 50% 65%, 0 40%);
   z-index: -1;
 }
 .inicio-contenedor {
   max-width: 800px;
-  padding: 100px 0;
+  padding: 50px 0;
   display: grid;
   grid-auto-rows: max-content;
   align-items: center;
   gap: 1em;
-  padding-bottom: 100px;
   text-align: center;
   color: var(--color-secundario);
-  margin-bottom: 15rem;
 }
 .inicio-titulo {
   font-size: 3rem;
+  color: var(--negro);
+  font-weight: bolder;
 }
 .inicio-parrafo {
-  margin-bottom: 20px;
+  
+  color: var(--negro);
+  font-weight: bolder;
 }
 .subtitulo {
   color: var(--naranja);
